# ctranslate2_triton_backend

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: CTranslate2BackendConfig.cmake.in
examples/: client.py
examples/model_repo/Helsinki-NLP_opus-mt-en-de/: config.pbtxt
examples/model_repo/Helsinki-NLP_opus-mt-en-de/1/: README.md
examples/model_repo/facebook_m2m100_1.2B/: config.pbtxt
src/: ctranslate2.cc
